# chip-8-emulator

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  chip-8-emulator.sln
chip-8-emulator/: chip-8-emulator.vcxproj  chip-8-emulator.vcxproj.filters  imgui.ini
chip-8-emulator/src/: chip8.cpp  chip8.h  emulator.cpp  emulator.h  main.cpp
src/: chip8.cpp  chip8.h  emulator.cpp  emulator.h  main.cpp  window.cpp  window.h
